--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: train-schedule
-        image: linuxacademycontent/train-schedule:autoscaling
+        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 8080
         livenessProbe:
@@ -45,7 +45,7 @@ spec:
           periodSeconds: 10
         resources:
           requests:
-            cpu: 200m
+            cpu: 100m
 
 ---
 
@@ -60,7 +60,7 @@ spec:
     kind: Deployment
     name: train-schedule-deployment
   minReplicas: 1
-  maxReplicas: 4
+  maxReplicas: 6
   metrics:
   - type: Resource
     resource:
