--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -34,6 +34,10 @@ spec:
       containers:
       - name: train-schedule
         image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
+        command:
+          - /metrics-server
+          - --kubelet-insecure-tls
+          - --kubelet-preferred-address-types=InternalIP
         ports:
         - containerPort: 8080
         livenessProbe:
